--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,4 +9,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="homefulfriends.localet.MainActivity">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+        android:id="@+id/textView2"
+        android:layout_centerVertical="true"
+        android:layout_alignParentEnd="true"
+        android:contextClickable="false"
+        android:textIsSelectable="true"
+        android:textSize="30dp" />
 </RelativeLayout>
