--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,19 +2,37 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="homefulfriends.localet.MainActivity">
 
-  <com.esri.android.map.MapView
-        android:id="@+id/map"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        mapoptions.MapType="Streets"
-        mapoptions.center="34.056215, -117.195668"
-        mapoptions.ZoomLevel="16">
-  </com.esri.android.map.MapView>
+  <LinearLayout
+      android:orientation="vertical"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:weightSum="4">
+
+    <com.esri.android.map.MapView
+          android:id="@+id/map"
+          android:layout_width="fill_parent"
+          android:layout_height="wrap_content"
+          mapoptions.MapType="Streets"
+          mapoptions.center="34.056215, -117.195668"
+          mapoptions.ZoomLevel="16"
+        android:layout_weight="2">
+    </com.esri.android.map.MapView>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_weight="2"
+        android:nestedScrollingEnabled="false"
+        android:onClick="example" />
+  </LinearLayout>
+
 </RelativeLayout>
