--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="homefulfriends.localet.MainActivity">
 
-  <com.mapquest.mapping.maps.MapView
-      android:id="@+id/mapquestMapView"
-      app:mapquest_app_key="Zcnqkiy9DkOge4JeYQP8Kev5m8jnG22N"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content" />
+  <Button
+      android:id="@+id/myButton"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/openCamera" />
+  <ImageView
+      android:src="@android:drawable/ic_menu_gallery"
+      android:layout_width="fill_parent"
+      android:layout_height="300.0dp"
+      android:id="@+id/imageView1"
+      android:adjustViewBounds="true" />
 </RelativeLayout>
