--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,9 @@
   <ImageView
       android:src="@android:drawable/ic_menu_gallery"
       android:layout_width="fill_parent"
-      android:layout_height="300.0dp"
+      android:layout_height="150.0dp"
       android:id="@+id/imageView1"
-      android:adjustViewBounds="true" />
+      android:adjustViewBounds="true"
+      android:layout_centerVertical="true"
+      android:layout_alignParentStart="true" />
 </RelativeLayout>
