--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -6,16 +6,24 @@
     android:background="#ffffff"
     android:orientation="vertical"
     tools:context="homefulfriends.localet.ChatActivity"
-    android:weightSum="3"
-    android:contextClickable="false">
+    android:weightSum="6">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/imageView3"
         android:src="@drawable/icon"
-        android:layout_weight="3"
+        android:layout_weight="6"
         android:background="#e67e22" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="70dp"
+        android:id="@+id/result"
+        android:layout_weight="7"
+        android:text="It&apos;s the Golden Gate Bridge!"
+        android:textSize="20dp"
+        android:textColor="#000" />
 
     <include
         layout="@layout/type_message_area"
